--- a/draft/benchmarking.tex
+++ b/draft/benchmarking.tex
@@ -18,7 +18,7 @@ illustrate how an increase of computational complexity and data accesses
 affects time to completion.
 We also showcase effective host read and write throughput for each I/O
 processing scheme.
-This benchmarking clarifies the capabilities of the proposed scheme, not
+This benchmarking clarifies the capabilities of the presented scheme, not
 specific to plasma control but applicable to generic low-latency
 GPU computing.
 
