--- a/draft/conclusion.tex
+++ b/draft/conclusion.tex
@@ -13,11 +13,11 @@ of I/O processing schemes for the GPU.
 We believe that the contribution of this paper facilitates a grander
 vision of CPS using parallel computing technology.
 
-In future work, we extend our schemes to support multiple contexts.
-This extension is essential to control multiple plants using the
-identical GPU.
-A key challenge is to ensure exclusive direct access to the same memory
-space, because the device driver and the runtime system cannot
-intermidiate in zero-copy I/O processing.
-We also plan to generalize our schemes for arbitrary I/O devices such as
-ethernet and firewire interfaces.
+%In future work, we extend our schemes to support multiple contexts.
+%This extension is essential to control multiple plants using the
+%identical GPU.
+%A key challenge is to ensure exclusive direct access to the same memory
+%space, because the device driver and the runtime system cannot
+%intermidiate in zero-copy I/O processing.
+%We also plan to generalize our schemes for arbitrary I/O devices such as
+%ethernet and firewire interfaces.
