--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -89,9 +89,9 @@ Zero-Copy I/O Processing for Low-Latency GPU Computing
        \affaddr{Dept. Information Engineering}\\
        \affaddr{Nagoya University}
 \and
-\alignauthor Nikolaus Rath\\
-       \affaddr{Dept. Applied Physics and Applied Mathematics}\\
-       \affaddr{Columbia University}
+%\alignauthor Nikolaus Rath\\
+%       \affaddr{Dept. Applied Physics and Applied Mathematics}\\
+%       \affaddr{Columbia University}
 \and
 \alignauthor Jason Aumiller and Scott Brandt\\
        \affaddr{Dept. Computer Science}\\
@@ -126,6 +126,7 @@ Zero-Copy I/O Processing for Low-Latency GPU Computing
 \input{benchmarking.tex}
 \input{related_work.tex}
 \input{conclusion.tex}
+\input{acknowledgement.tex}
 
 \bibliographystyle{abbrv}
 %{\footnotesize
