--- a/draft/implementation.tex
+++ b/draft/implementation.tex
@@ -41,9 +41,9 @@ The three functions are wrapped by the Gdev-original extended API
 functions, {\tt cuMemMap()}, {\tt cuMemUnmap()}, and {\tt
 cuMemGetPhysAddr()}, which are compatible to the form of the CUDA Driver
 API.
-We now provide the details of these functions below:
+We now provide the details of these functions:
 
-\begin{itemize}
+\begin{itemize} \itemsep1pt
  \item \textbf{Mapping Memory:}
        We assign the second PCIe BAR region, \textit{i.e.}, BAR1 (among
        the five of those supported by hardware as a window of the device
