--- a/draft/introduction.tex
+++ b/draft/introduction.tex
@@ -3,7 +3,7 @@
 
 \begin{figure}[t]
  \centering
- \includegraphics[width=0.82\hsize]{eps/tokamak.eps}
+ \includegraphics[width=0.79\hsize]{eps/tokamak.eps}
  \caption{Columbia's HBT-EP ``Tokamak''.}
  \label{fig:tokamak}
 \end{figure}
@@ -81,9 +81,9 @@ parallel computing technology.
 The rest of this paper is organized as follows.
 Section~\ref{sec:system_model} describes the system model and
 assumptions behind this paper.
-Section~\ref{sec:io_processing} proposes our zero-copy I/O processing
+Section~\ref{sec:io_processing} presents our zero-copy I/O processing
 scheme, and differentiates it from the existing schemes.
-Section~\ref{sec:implementation} presents details of system
+Section~\ref{sec:implementation} describes details of system
 implementation.
 In Section~\ref{sec:case_study}, a case study of plasma control is
 provided to demonstrate the real-world impact of our contribution.
